<resources>
    <string name="app_name">IKN</string>
    <string name="pin_description">Map pin icon</string>
    <string name="currency">Rp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_trans_fragment">Hello trans fragment</string>
    <string name="hello_scan_fragment">Scan</string>
    <string name="hello_graf_fragment">Hello graf fragment</string>
    <string name="hello_setting_fragment">Hello setting fragment</string>
    <string name="transaction">Transaction</string>
    <string name="scan">Scan</string>
    <string name="graph">Graph</string>
    <string name="settings">Settings</string>
    <string name="bottom_navigation_item_icon">Bottom navigation item icon</string>
    <string name="total_transaction">Total Transaction</string>
    <string name="desc_floating_action_button_transaction">Button to add a new transaction</string>
    <string name="save_string">Save</string>
</resources>