<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_paid_bill"
        android:title="@string/transaction" />
    <item
        android:id="@+id/nav_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_scanner"
        android:title="@string/scan" />
    <item
        android:id="@+id/nav_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_pie_chart"
        android:title="@string/graph" />
    <item
        android:id="@+id/nav_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_setting_vertical"
        android:title="@string/settings" />
</menu>